cluster/apps/platform/ittools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ittools
  namespace: ittools
  labels:
    app.kubernetes.io/name: ittools
    app.kubernetes.io/component: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ittools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ittools
    spec:
      containers:
        - name: web
          image: corentinth/it-tools:2024.10.22-7ca5933
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
