cluster/apps/platform/ittools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ittools
  namespace: ittools
  labels:
    app.kubernetes.io/name: ittools
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ittools
